--- a/SimpleEclipseMaven/pom.xml
+++ b/SimpleEclipseMaven/pom.xml
@@ -5,9 +5,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>SimpleEclipseMaven</name>
   <description>ProjectSample</description>
+  <packing>jar</packing>
   
   <properties>
   	<maven.compiler.source>1.8</maven.compiler.source>
   	<maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  
+  
 </project>
